# unicesumar-aula5-estrutura-de-dados

./: CMakeLists.txt  main.c  readme.md
01_lista_dinamica/: 01_lista_dinamica.c  01_lista_dinamica.h
02_lista_duplamente_encadeada/: 02_lista_duplamente_encadeada.c  02_lista_duplamente_encadeada.h
03_lista_tarefas/: 03_lista_tarefas.c  03_lista_tarefas.h
